Fixed bug where on comic reader page it would add whitespace at about 20%to the right of the page

--- a/CSS/reader.css
+++ b/CSS/reader.css
@@ -65,14 +65,13 @@
 .comic{
 	display: inline-block;
 	max-width: 70%;
-  margin-top: 2.5%;
-  font-family: 'Muli', Arial, Helvetica, san-serif;
+  	margin-top: 2.5%;
+  	font-family: 'Muli', Arial, Helvetica, san-serif;
 
 }
 
 .comic img{
-	margin-right: 20%;
-	padding-right:30px;
+	padding-right:20px;
 
 }
 
